# personal-data-organizer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  learn.md  pyproject.toml  test.py  test_analyzer.py
querys/: query.py  script.py
src/personal_data_organizer/: cli.py  inventory.py  path_utils.py  pdf_enrichment.py
src/personal_data_organizer/analyzers/: __init__.py  folder_analyzer.py
src/personal_data_organizer/services/: git_service.py
src/personal_data_organizer/types/: __init__.py  recomendation.py
